Fixes heart center alignment (safari mobile)

--- a/assets/scss/6-layout/_support.scss
+++ b/assets/scss/6-layout/_support.scss
@@ -10,6 +10,7 @@
 
   &__icon {
     font-size: rem-calc(90);
+    width: rem-calc(90);
     margin: 0 auto;
   }
 
